syntax = "proto3";

package schedule;

import "google/protobuf/empty.proto";

service Schedule {
    rpc CreateSchedule (CreateScheduleRequest) returns (google.protobuf.Empty);
    rpc DeleteSchedule (DeleteScheduleRequest) returns (google.protobuf.Empty);
    rpc ListSchedules (google.protobuf.Empty) returns (ListSchedulesResponse);
}

message CreateScheduleRequest {
    string command_name = 1;
    string crontab = 2;
    repeated string params = 3;
}

message DeleteScheduleRequest {
    int64 id = 1;
}

message ScheduleResponse {
    int64 id = 1;
    string command_name = 2;
    string crontab = 3;
    repeated string params = 4;
}

message ListSchedulesResponse {
    repeated ScheduleResponse schedules = 1;
}